# manga-ocr-translator

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  README.md  README.zh-TW.md  prompts.toml.example  pyproject.toml  skills-lock.json
.agents/context/: DESIGN.md  PRODUCT.md
.agents/skills/content-marketing/references/: guest-insights.md
.agents/skills/product-hunt-launch/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/app/: api_errors.py  main.py  ollama_client.py  prompts.py
backend/app/routes/: models.py  ocr.py  prompts.py  translate.py
backend/tests/: test_models_api.py  test_ocr_api.py  test_prompts_api.py  test_translate_api.py
docs/: PRD.md  PRODUCT.md  TECH.md  index.html  landing.css  llms.txt
docs/adr/: 0001-structured-model-results.md  0002-translate-blocks-together.md  0003-reject-invalid-model-json.md  0004-use-complete-model-responses.md  0005-proxy-ollama-through-local-backend.md  0006-use-fastapi-backend.md  0007-use-react-vite-typescript.md  0008-do-not-persist-uploaded-images.md  0009-externalize-prompts-as-toml.md  0010-text-region-detection.md  0011-stream-progress-with-complete-results.md  0012-multi-page-reading-task.md
docs/agents/: domain.md  issue-tracker.md
docs/launch/: README.md  intro-post.md  product-hunt.md  reddit.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  styles.css
