[project]
name = "manga-ocr-translator"
version = "0.1.0"
description = "Local-first manga OCR translator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".agents",
    ".scratch",
    ".venv",
    "frontend/dist",
    "frontend/node_modules",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"backend/app/routes/*.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
mypy_path = "backend"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "app.*"
strict = true
